[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/bahnschrift.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://UI/Scripts/Tutorials.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 48
font_data = ExtResource( 1 )

[node name="Tutorials" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Base" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Label" type="Label" parent="Base"]
margin_left = -8.0
margin_top = 8.0
margin_right = 968.0
margin_bottom = 544.0
custom_fonts/font = SubResource( 1 )
text = "COMMING SOON !"
align = 1
valign = 1
autowrap = true

[node name="Step1" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Step1"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Step2" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Step3" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Next" type="Button" parent="."]
visible = false
margin_left = 848.0
margin_top = 544.0
margin_right = 961.0
margin_bottom = 599.0
custom_fonts/font = SubResource( 2 )
text = "Next"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Prev" type="Button" parent="."]
visible = false
margin_left = 848.0
margin_top = 544.0
margin_right = 961.0
margin_bottom = 599.0
custom_fonts/font = SubResource( 2 )
text = "Next"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Next" to="." method="_on_Next_pressed"]
[connection signal="pressed" from="Prev" to="." method="_on_Prev_pressed"]
